// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section c__cohort-url"
      >
        <div
          class="ui big labeled input"
        >
          <div
            class="ui label label"
          >
            Cohort url
          </div>
          <input
            type="text"
            value="http://localhost/cohort/2"
          />
        </div>
         
        <button
          class="ui small icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="clipboard outline icon primary"
          />
          Copy cohort link to clipboard
        </button>
      </section>
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        <button
          authority="[object Object]"
          id="2"
        >
          @components/Cohorts/CohortParticipants
        </button>
        ;
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 2 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 2 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section c__cohort-url"
      >
        <div
          class="ui big labeled input"
        >
          <div
            class="ui label label"
          >
            Cohort url
          </div>
          <input
            type="text"
            value="http://localhost/cohort/2"
          />
        </div>
         
        <button
          class="ui small icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="clipboard outline icon primary"
          />
          Copy cohort link to clipboard
        </button>
      </section>
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        <button
          authority="[object Object]"
          id="2"
        >
          @components/Cohorts/CohortParticipants
        </button>
        ;
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 3 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 3 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists Within Inline Props
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section c__cohort-url"
      >
        <div
          class="ui big labeled input"
        >
          <div
            class="ui label label"
          >
            Cohort url
          </div>
          <input
            type="text"
            value="http://localhost/cohort/1"
          />
        </div>
         
        <button
          class="ui small icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="clipboard outline icon primary"
          />
          Copy cohort link to clipboard
        </button>
      </section>
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="1"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        <button
          authority="[object Object]"
          id="1"
        >
          @components/Cohorts/CohortParticipants
        </button>
        ;
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 4 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 4 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 5 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 5 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 6 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 6 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 7 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 7 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 8 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 8 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 9 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 9 1 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section c__cohort-url"
      >
        <div
          class="ui big labeled input"
        >
          <div
            class="ui label label"
          >
            Cohort url
          </div>
          <input
            type="text"
            value="http://localhost/cohort/2"
          />
        </div>
         
        <button
          class="ui small icon left labeled button"
        >
          <i
            aria-hidden="true"
            class="clipboard outline icon primary"
          />
          Copy cohort link to clipboard
        </button>
      </section>
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        <button
          authority="[object Object]"
          id="2"
        >
          @components/Cohorts/CohortParticipants
        </button>
        ;
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render: Mock CohortScenarios 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render: Mock CohortScenarios 3`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render: Mock CohortScenarios 4`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="active item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <section
        class="c__section"
      >
        <h2
          class="ui header c__header"
        >
          Cohort scenarios
        </h2>
        <div>
          <button
            authority="[object Object]"
            id="2"
          >
            @components/Cohorts/CohortScenarios
          </button>
        </div>
      </section>
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render: Mock CohortScenarios 5`] = `
<DocumentFragment>
  <div>
    <div
      class="ui top attached tabular c__tab-menu--overflow menu"
    >
      <a
        class="item"
        tabindex="0"
      >
        A New Cohort That Exists In Bootstrap State For Testing
      </a>
      <a
        class="active item"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="content icon"
        />
        Cohort 2 Scenario Null
      </a>
    </div>
    <div
      class="ui bottom attached segment"
    >
      <div>
        @components/Cohorts/DataTable
      </div>
    </div>
    <div
      data-testid="cohort-boundary-bottom"
      hidden=""
      id="boundary-bottom"
      style="background-color: red; height: 1px; width: 100vw; z-index: 9007199254740991;"
    />
  </div>
</DocumentFragment>
`;

exports[`Render: user missing, direct to /logout 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render: user missing, direct to /logout 3`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render: user missing, direct to /logout 4`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
